--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <title>Breakout!</title>
 </head>
 <body>
+  <h1>Breakout!</h1>
+  <button id="rules-btn" class="btn rules-btn">Show Rules</button>
+  <div id="rules" class="rules">
+    <h2>How to Play</h2>
+    <p>Use your left and right arrow keys to move the paddle. Bounce the ball up to break the blocks.</p>
+    <p>If you miss the ball, your score and the blocks will be reset.</p>
+    <button id="close-btn" class="btn">Close</button>
+  </div>
 
+  <canvas id="canvas" width="800" height="600"></canvas>
 </body>
 </html>
