--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Breakout!</h1>
-  <button id="rules-btn" class="btn rules-btn">Show Rules</button>
+  <button id="rules-btn" class="btn rules-btn">Rules</button>
   <div id="rules" class="rules">
     <button id="close-btn" class="btn">Close</button>
     <h2>How to Play</h2>
